--- a/feladat1.css
+++ b/feladat1.css
@@ -8,7 +8,7 @@ body{
     height: 100vh;
 }
 
-.container{
+.container1{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,23 +16,25 @@ body{
     width: 800px;
     height: 300px;
     background: yellow;
-}
-
-div {
-    width: 100px;
-    height: 100px;
+    margin-bottom: 20px;
 }
 
 .d1{
     display: none;
     background-color: green;
+        width: 100px;
+    height: 100px;
 }
 
 .d2{
     display: none;
     background-color: yellow;
+        width: 100px;
+    height: 100px;
 }
 
 .d3{
     background-color: purple;
+        width: 100px;
+    height: 100px;
 }
