--- a/feladat2.css
+++ b/feladat2.css
@@ -8,13 +8,14 @@ body{
     height: 100vh;
 }
 
-ul{
+.container2{
     display: flex;
     width: 100%;
     height: 400px;
     align-items: center;
     background: yellow;
     gap: 5px;
+    margin-bottom: 20px;
 }
 
 li {
