--- a/feladat3.css
+++ b/feladat3.css
@@ -8,7 +8,7 @@ body{
     height: 100vh;
 }
 
-ul{
+.container3{
     display: flex;
     width: 100%;
     height: 400px;
@@ -16,6 +16,7 @@ ul{
     align-items: center;
     background: yellow;
     gap: 5px;
+    margin-bottom: 20px;
 }
 
 li {
